unpackaged/main/default/objects/npe5__Affiliation__c/npe5__Affiliation__c.object-meta.xml
<CustomObject>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>