unpackaged/main/default/objects/npe5__Affiliation__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <description>Used to categorize the type of Affiliation.</description>
    <inlineHelpText>Select the type of Affiliation.</inlineHelpText>
    <label>Affiliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliation_Type</valueSetName>
    </valueSet>
</CustomField>