unpackaged/main/default/objects/npe5__Affiliation__c/fields/Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Link__c</fullName>
    <description>Detects if User is in Lightning vs. Classic and creates link to Contact</description>
    <formula>HYPERLINK(
    IF($User.UIThemeDisplayed = "Theme4d",
       "/lightning/r/Contact/" &amp;  npe5__Contact__r.Id  &amp; "/view",
       "/" &amp; npe5__Contact__r.Id),
    npe5__Contact__r.FirstName &amp; " " &amp; npe5__Contact__r.LastName, "_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Link</label>
    <type>Text</type>
</CustomField>