unpackaged/main/default/objects/npe5__Affiliation__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>