unpackaged/main/default/objects/npe5__Affiliation__c/fields/Created_From_FellowApp__c.field-meta.xml
<CustomField>
    <fullName>Created_From_FellowApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Created From FellowApp</label>
    <type>Checkbox</type>
</CustomField>