unpackaged/main/default/objects/npe5__Affiliation__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Current Employer</label>
    <type>Checkbox</type>
</CustomField>