unpackaged/main/default/objects/npe5__Affiliation__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify individuals who are decision makers for the affiliated Accounts.</description>
    <inlineHelpText>Check if Contact has an important decision-making role for the Account.</inlineHelpText>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>