unpackaged/main/default/objects/npe5__Affiliation__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>