unpackaged/main/default/objects/npe5__Affiliation__c/fields/EDF_Board_Committee__c.field-meta.xml
<CustomField>
    <fullName>EDF_Board_Committee__c</fullName>
    <formula>IF ( npe5__Organization__r.Name = "EDF Board of Trustees", TRUE,
IF ( npe5__Organization__r.Name = "EDAF Board", TRUE,
IF ( npe5__Organization__r.Name = "Environmental Defense Fund Europe Board", TRUE,
FALSE)))</formula>
    <label>EDF Board Committee</label>
    <type>Checkbox</type>
</CustomField>