unpackaged/main/default/objects/npe5__Affiliation__c/fields/Education_Degree__c.field-meta.xml
<CustomField>
    <fullName>Education_Degree__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Education Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>