unpackaged/main/default/objects/npe5__Affiliation__c/fields/Group_Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Group_Recommended_By__c</fullName>
    <description>Heller created 2021</description>
    <label>Group Recommended By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>