unpackaged/main/default/objects/npe5__Affiliation__c/fields/Legacy_Role__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Role__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Legacy Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>