unpackaged/main/default/objects/npe5__Affiliation__c/fields/npe5__EndDate__c.field-meta.xml
<CustomField>
    <fullName>npe5__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>