unpackaged/main/default/objects/npe5__Affiliation__c/fields/npe5__Primary__c.field-meta.xml
<CustomField>
    <fullName>npe5__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will automatically fill the Contact's Primary Affiliation field with the organization's name.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>