unpackaged/main/default/objects/npe5__Affiliation__c/fields/npe5__Role__c.field-meta.xml
<CustomField>
    <fullName>npe5__Role__c</fullName>
    <inlineHelpText>What's the Contact's role at the affiliated organization? For example, for employees, it's their job title and for board members, it's their position such as chair, secretary, member, etc.

If Affiliation Type = Employer/Employee and Status = Current, the Role value will populate on the Contact's Title field and the affiliated organization will populate on the Contact's Employer field.</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>