unpackaged/main/default/objects/npe5__Affiliation__c/fields/npsp__Related_Opportunity_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
    <description>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</description>
    <inlineHelpText>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</inlineHelpText>
    <label>Related Opportunity Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funder - Soft Credit</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
                <isActive>false</isActive>
                <label>Agency</label>
            </value>
            <value>
                <fullName>Corporate Match</fullName>
                <isActive>false</isActive>
                <label>Corporate Match</label>
            </value>
            <value>
                <fullName>DAF</fullName>
                <isActive>false</isActive>
                <label>DAF</label>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
                <isActive>false</isActive>
                <label>Decision Maker</label>
            </value>
            <value>
                <fullName>Gift of Membership</fullName>
                <isActive>false</isActive>
                <label>Gift of Membership</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <isActive>false</isActive>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
                <isActive>false</isActive>
                <label>Soft Credit</label>
            </value>
            <value>
                <fullName>Solicitor</fullName>
                <isActive>false</isActive>
                <label>Solicitor</label>
            </value>
            <value>
                <fullName>Sponsor</fullName>
                <isActive>false</isActive>
                <label>Sponsor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>