unpackaged/main/default/objects/npe5__Affiliation__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Recommended By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations (Recommended By)</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>