unpackaged/main/default/objects/npe5__Affiliation__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations (Reports To)</relationshipLabel>
    <relationshipName>Affiliations_Reports_To</relationshipName>
    <type>Lookup</type>
</CustomField>