unpackaged/main/default/objects/npe5__Affiliation__c/fields/UG_Major_s__c.field-meta.xml
<CustomField>
    <fullName>UG_Major_s__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>UG Major(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>