unpackaged/main/default/objects/npe5__Affiliation__c/validationRules/Unchecked_the_Current_Employer_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Unchecked_the_Current_Employer_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT( npe5__Status__c ) = 'Former',
TEXT(PRIORVALUE( npe5__Status__c )) = 'Current',
Current_Employer__c = TRUE
)</errorConditionFormula>
    <errorMessage>Either this contact is indicated as the Primary Contact for another Organization or you're attempting to set a Current Employer to Former. Please navigate to the correct Contact Record and review the Current Affiliations.</errorMessage>
</ValidationRule>